split logic models

--- a/view/layout/web/admin/addGoods.tpl.html
+++ b/view/layout/web/admin/addGoods.tpl.html
@@ -1,17 +1,28 @@
-<div id="addMenuModal" class="modal" tabindex="-1">
+<div id="addGoodsModal" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="blue bigger">新增菜品及主食</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=addGoods" enctype="multipart/form-data" id="addGoodsForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=saveGoods" enctype="multipart/form-data" id="addGoodsForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-5">
                             <div class="space"></div>
-
                             <input type="file" name="picture" id="addGoodsForm_picture"/>
+                            <div class="space"></div>
+                            <div>
+                                <label>所属分类</label>
+                                <div>
+                                    <?php foreach($category_list as $c):?>
+                                        <label>
+                                            <input class="ace" type="checkbox" name="category[]" value="<?=$c['id']?>">
+                                            <span class="lbl">&nbsp;<?=$c['name']?></span>
+                                        </label>
+                                    <?php endforeach;?>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="col-xs-12 col-sm-7">
@@ -69,7 +80,7 @@
 </div>
 <script>
     $(function(){
-        $("#addMenuModal").modal();
+        $("#addGoodsModal").modal();
 
         $("#addGoodsForm_picture").ace_file_input({
             style:'well',
@@ -117,7 +128,7 @@
             rules: {
                 name: {
                     required: true,
-                    remote: '?c=admin&a=checkGoodsName'
+                    remote: '?c=admin&a=isExistGoods'
                 },
                 price: {
                     required: true,
