--- a/view/layout/web/admin/addCategory.tpl.html
+++ b/view/layout/web/admin/addCategory.tpl.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="blue bigger">新增菜品分类</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=addCategory" id="addCategoryForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=saveCategory" id="addCategoryForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-5">
@@ -23,14 +23,17 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 slimScrollBar" style="overflow: auto; height: 380px;">
-                            <?php foreach($all_goods as $c):?>
-                            <div class="checkbox">
-                                <label>
-                                    <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>">
-                                    <span class="lbl">&nbsp;<?=$c['name']?></span>
-                                </label>
+                            <div>
+                                <label>包含菜品</label>
+                                <div>
+                                    <?php foreach($goods_list as $c):?>
+                                    <label>
+                                        <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>">
+                                        <span class="lbl">&nbsp;<?=$c['name']?></span>
+                                    </label>
+                                    <?php endforeach;?>
+                                </div>
                             </div>
-                            <?php endforeach;?>
                         </div>
                     </div>
                 </div>
@@ -70,7 +73,7 @@
             rules: {
                 name: {
                     required: true,
-                    remote: '?c=admin&a=checkCategoryName'
+                    remote: '?c=admin&a=isExistCategory'
                 }
             },
             messages: {
