--- a/view/layout/web/admin/editCategory.tpl.html
+++ b/view/layout/web/admin/editCategory.tpl.html
@@ -1,42 +1,40 @@
-<?php
-$id = $category['id'];
-$name = $category['name'];
-$order = $category['order'];
-?>
-<div id="updateCategoryModal" class="modal" tabindex="-1">
+<div id="editCategoryModal" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="blue bigger">更新菜品分类</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=updateCategory&id=<?=$id?>" id="updateCategoryForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=updateCategory&id=<?=$category['id']?>" id="editCategoryForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-5">
                             <div class="form-group">
-                                <label for="updateCategoryForm_name">名称</label>
+                                <label for="editCategoryForm_name">名称</label>
                                 <div>
-                                    <input class="input-large" type="text" id="updateCategoryForm_name" name="name" value="<?=$name?>"/>
+                                    <input class="input-large" type="text" id="editCategoryForm_name" name="name" value="<?=$category['name']?>"/>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="updateCategoryForm_order">排列顺序</label>
+                                <label for="editCategoryForm_order">排列顺序</label>
                                 <div>
-                                    <input class="input-mini" type="text" id="updateCategoryForm_order" name="order"/>
+                                    <input class="input-mini" type="text" id="editCategoryForm_order" name="order"/>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 slimScrollBar" style="overflow: auto; height: 380px;">
-                            <?php foreach($all_goods as $c):?>
-                            <div class="checkbox">
-                                <label>
-                                    <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>"
-                                        <?php if(in_array($c['id'], $goods_ids)):?>checked<?php endif;?>>
-                                    <span class="lbl">&nbsp;<?=$c['name']?></span>
-                                </label>
+                            <div>
+                                <label>包含菜品</label>
+                                <div>
+                                    <?php foreach($goods_list as $c):?>
+                                    <label>
+                                        <input class="ace" type="checkbox" name="goods[]" value="<?=$c['id']?>"
+                                            <?php if(in_array($c['id'], $goods_ids)):?>checked<?php endif;?>>
+                                        <span class="lbl">&nbsp;<?=$c['name']?></span>
+                                    </label>
+                                    <?php endforeach;?>
+                                </div>
                             </div>
-                            <?php endforeach;?>
                         </div>
                     </div>
                 </div>
@@ -58,10 +56,10 @@ $order = $category['order'];
 </div>
 <script>
     $(function(){
-        $("#updateCategoryModal").modal();
+        $("#editCategoryModal").modal();
 
-        $('#updateCategoryForm_order').ace_spinner({
-            value: <?=$order?>,
+        $('#editCategoryForm_order').ace_spinner({
+            value: <?=$category['order']?>,
             min: 0,
             max: 10000,
             step: 1,
@@ -69,14 +67,14 @@ $order = $category['order'];
             btn_down_class: 'btn-info'
         });
 
-        $('#updateCategoryForm').validate({
+        $('#editCategoryForm').validate({
             errorElement: 'div',
             errorClass: 'help-block',
             focusInvalid: false,
             rules: {
                 name: {
                     required: true,
-                    remote: '?c=admin&a=checkCategoryName&previous=<?=$name?>'
+                    remote: "?c=admin&a=isExistCategory&previous=<?=$category['name']?>"
                 }
             },
             messages: {
