--- a/view/layout/web/admin/editGoods.tpl.html
+++ b/view/layout/web/admin/editGoods.tpl.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="blue bigger">更新菜品及主食</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=updateGoods&id=<?=$id?>" enctype="multipart/form-data" id="editGoodsForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=updateGoods&id=<?=$goods['id']?>" enctype="multipart/form-data" id="editGoodsForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-5">
@@ -33,7 +33,8 @@
                                 <div>
                                     <?php foreach($category_list as $c):?>
                                         <label>
-                                            <input class="ace" type="checkbox" name="category[]" value="<?=$c['id']?>">
+                                            <input class="ace" type="checkbox" name="category[]" value="<?=$c['id']?>"
+                                                <?php if(in_array($c['id'], $goods_category_ids)):?>checked<?php endif;?>>
                                             <span class="lbl">&nbsp;<?=$c['name']?></span>
                                         </label>
                                     <?php endforeach;?>
