--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -2,7 +2,7 @@
     <div class="hdt-wrap">
         <div class="hdt">
             <div class="logo">
-                <a href="http://mslms.net/"><img src="static/img/logo.jpg"></a>
+                <a href="?c=<?=c('default_controller')?>&a=<?=c('default_action')?>"><img src="static/img/logo.jpg"></a>
             </div>
             <div class="hdc geyou">
                 <div class="hdi">
@@ -21,9 +21,9 @@
                     </ul>
                 </div>
 
-                <div>
+                <!--<div>
                     <a><img alt="订餐页面广告2" src="static/img/ad2.jpg"></a>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
