--- a/view/layout/web/admin/addArticle.tpl.html
+++ b/view/layout/web/admin/addArticle.tpl.html
@@ -15,31 +15,47 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-12">
                             <div class="form-group">
-                                <label for="addArticleForm_title">标题</label>
-                                <div>
-                                    <input class="col-xs-12 col-sm-12" type="text" id="addArticleForm_title" name="title"/>
+                                <div class="col-xs-10 col-sm-10">
+                                    <label for="addArticleForm_title">标题</label>
+                                    <div>
+                                        <input class="form-control" type="text" id="addArticleForm_title" name="title"/>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="plain_text"> 文本样式 </label>
-
-                                <div>
-                                    <label>
-                                        <input class="ace" type="radio" id="plain_text" name="_text_style">
-                                        <span class="lbl"> 纯文本</span>
-                                    </label>
-                                    &nbsp;
-                                    <label>
-                                        <input class="ace" type="radio" id="rich_text" name="_text_style">
-                                        <span class="lbl"> 富文本</span>
-                                    </label>
+                                <div class="col-xs-4 col-sm-4">
+                                    <label for="addArticleForm_alias">别名</label>
+                                    <div>
+                                        <input class="form-control" type="text" id="addArticleForm_alias" name="alias"/>
+                                    </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="addArticleForm_content">内容</label>
-                                <div>
-                                    <textarea rows="9" id="addArticleForm_content" name="content"
-                                              class="form-control limited"></textarea>
+                                <div class="col-xs-12 col-sm-12">
+                                    <label for="addArticleForm_type">类型</label>
+                                    <div>
+                                        <select id="addArticleForm_type" name="type">
+                                            <option value="1">系统公告</option>
+                                            <option value="2">网站页面</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-xs-12 col-sm-12">
+                                    <label for="addArticleForm_content">内容</label>
+                                    <label class="pull-right">
+                                        <input class="ace" type="checkbox" id="text_flag">
+                                        <span class="lbl grey"> 使用富文本</span>
+                                    </label>
+                                    <label class="pull-right">
+                                        <input class="ace" type="checkbox" id="comment_flag" name="flag">
+                                        <span class="lbl grey"> 可以评论</span>
+                                    </label>
+                                    <div>
+                                        <textarea rows="9" id="addArticleForm_content" name="content"
+                                                  class="form-control"></textarea>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -65,29 +81,30 @@
     $(function(){
         $("#addArticleModal").modal();
 
-        $('#addArticleForm_order').ace_spinner({
-            value: 0,
-            min: 0,
-            max: 10000,
-            step: 1,
-            btn_up_class: 'btn-info',
-            btn_down_class: 'btn-info'
-        });
-
         $('#addArticleForm').validate({
             errorElement: 'div',
             errorClass: 'help-block',
             focusInvalid: false,
             rules: {
-                name: {
-                    required: true,
+                title: {
+                    required: true
+                },
+                alias: {
                     remote: '?c=admin&a=isExistArticle'
+                },
+                content: {
+                    required: true
                 }
             },
             messages: {
-                name: {
-                    required: "请填写文章名称",
-                    remote: "该文章已存在"
+                title: {
+                    required: "请填写文章名称"
+                },
+                alias: {
+                    remote: "该文章已经存在"
+                },
+                content: {
+                    required: "请填写文章内容"
                 }
             },
             highlight: function (e) {
