add edit article page

--- a/view/layout/web/admin/addArticle.tpl.html
+++ b/view/layout/web/admin/addArticle.tpl.html
@@ -49,7 +49,7 @@
                                         <span class="lbl grey"> 使用富文本</span>
                                     </label>
                                     <label class="pull-right">
-                                        <input class="ace" type="checkbox" id="comment_flag" name="flag">
+                                        <input class="ace" type="checkbox" id="comment_flag" name="flag" value="1">
                                         <span class="lbl grey"> 可以评论</span>
                                     </label>
                                     <div>
