--- a/view/layout/web/admin/articleList.tpl.html
+++ b/view/layout/web/admin/articleList.tpl.html
@@ -5,19 +5,17 @@
             <table id="sample-table-2" class="table table-striped table-bordered table-hover">
                 <thead>
                 <tr>
-                    <th class="center">
+                    <th class="center" style="width: 5%">
                         <label>
                             <input type="checkbox" class="ace" id="selectAll"/>
                             <span class="lbl"></span>
                         </label>
                     </th>
-                    <th>分类</th>
-                    <th>标题</th>
-                    <th>发布状态</th>
-                    <th>评论标志</th>
-                    <th><i class="icon-time bigger-110 hidden-480"></i>添加时间</th>
-                    <th><i class="icon-time bigger-110 hidden-480"></i>最后修改时间</th>
-                    <th></th>
+                    <th style="width: 10%">分类</th>
+                    <th style="width: 40%">标题</th>
+                    <th style="width: 15%"><i class="icon-time bigger-110 hidden-480"></i>添加时间</th>
+                    <th style="width: 15%"><i class="icon-time bigger-110 hidden-480"></i>最后修改时间</th>
+                    <th style="width: 15%"></th>
                 </tr>
                 </thead>
 
@@ -26,7 +24,7 @@
                     $rs = $pager->paginate();
                     while($rs && $c = mysql_fetch_assoc($rs)):
                 ?>
-                <tr id="Article<?=$c['id']?>">
+                <tr id="article<?=$c['id']?>">
                     <td class="center">
                         <label>
                             <input type="checkbox" class="ace" name="ids[]" value="<?=$c['id']?>"/>
@@ -35,7 +33,6 @@
                     </td>
                     <td><?=$c['type']?></td>
                     <td><?=$c['title']?></td>
-                    <td><?=$c['status']?></td>
                     <td><?=$c['createDate']?></td>
                     <td><?=$c['updateDate']?></td>
                     <td>
@@ -66,7 +63,7 @@
                 </span>
                 <span class="ui-pg-div">
                     <span class="ui-icon icon-plus-sign purple" onclick="addArticle()"></span>
-                    <span>新增分类</span>
+                    <span>发布文章</span>
                 </span>
             </div>
             <div class="col-md-10 text-right">
