--- a/view/layout/web/admin/resource_bottom.tpl.html
+++ b/view/layout/web/admin/resource_bottom.tpl.html
@@ -22,6 +22,9 @@
 <script type="text/javascript">
     if("ontouchend" in document) document.write("<script src='static/admin/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
 </script>
+<script src="static/admin/js/umeditor/umeditor.config.js"></script>
+<script src="static/admin/js/umeditor/umeditor.min.js"></script>
+<script src="static/admin/js/umeditor/lang/zh-cn/zh-cn.js"></script>
 <script src="static/admin/js/bootstrap.min.js"></script>
 <script src="static/admin/js/typeahead-bs2.min.js"></script>
 <script src="static/admin/js/jquery-ui-1.10.3.full.min.js"></script>
