--- a/view/layout/web/admin/resource_head.tpl.html
+++ b/view/layout/web/admin/resource_head.tpl.html
@@ -1,4 +1,5 @@
 <!-- basic styles -->
+<link rel="stylesheet" href="static/admin/js/umeditor/themes/default/css/umeditor.css">
 <link rel="stylesheet" href="static/admin/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="static/admin/css/bootstrap-timepicker.css"/>
 <link rel="stylesheet" href="static/admin/css/font-awesome.min.css"/>
