--- a/view/layout/web/footer.tpl.html
+++ b/view/layout/web/footer.tpl.html
@@ -1,10 +1,8 @@
-<div class="clearfix"></div>
 <div id="bottom">
-    <a href="http://mslms.net/msg/lxwm.aspx">联系我们</a> |
-    <a href="http://mslms.net/msg/about.aspx">关于我们</a> |
-    <a href="http://mslms.net/msg/zhinan.aspx">订餐指南 </a> |
-    <a href="http://mslms.net/msg/message.aspx">意见反馈 </a> |
-    <a href="http://mslms.net/usercenter/user_dangan.aspx">会员中心 </a>
+    <a href="?c=article&a=view2&alias=contact_us">联系我们</a> |
+    <a href="?c=article&a=view2&alias=about_us">关于我们</a> |
+    <a href="?c=article&a=view2&alias=order_guide">订餐指南 </a> |
+    <a href="?c=article&a=view2&alias=message_board">意见反馈 </a>
     <!--<br> Copyright &#169; 2012 www.roeasy.com
     <a href="http://www.roeasy.com/" target="_blank">技术支持：北京融易网络工作室</a>-->
     <br> 米嗖辣米嗖官方网上订餐外卖
