--- a/view/layout/web/admin/editArticle.tpl.html
+++ b/view/layout/web/admin/editArticle.tpl.html
@@ -8,9 +8,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="blue bigger">新增文章</h4>
+                <h4 class="blue bigger">编辑文章</h4>
             </div>
-            <form class="form-horizontal" method="post" action="?c=admin&a=saveArticle&id=<?=article['id']?>" id="editArticleForm">
+            <form class="form-horizontal" method="post" action="?c=admin&a=updateArticle&id=<?=$article['id']?>" id="editArticleForm">
                 <div class="modal-body overflow-visible">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12">
@@ -18,7 +18,7 @@
                                 <div class="col-xs-10 col-sm-10">
                                     <label for="editArticleForm_title">标题</label>
                                     <div>
-                                        <input class="form-control" type="text" id="editArticleForm_title" name="title" value="<?=article['title']?>"/>
+                                        <input class="form-control" type="text" id="editArticleForm_title" name="title" value="<?=$article['title']?>"/>
                                     </div>
                                 </div>
                             </div>
@@ -26,7 +26,7 @@
                                 <div class="col-xs-4 col-sm-4">
                                     <label for="editArticleForm_alias">别名</label>
                                     <div>
-                                        <input class="form-control" type="text" id="editArticleForm_alias" name="alias" value="<?=article['alias']?>"/>
+                                        <input class="form-control" type="text" id="editArticleForm_alias" name="alias" value="<?=$article['alias']?>"/>
                                     </div>
                                 </div>
                             </div>
@@ -35,26 +35,23 @@
                                     <label for="editArticleForm_type">类型</label>
                                     <div>
                                         <select id="editArticleForm_type" name="type">
-                                            <option value="1">系统公告</option>
-                                            <option value="2">网站页面</option>
+                                            <option value="1" <?php if($article['type']==1):?>selected<?php endif;?>>系统公告</option>
+                                            <option value="2" <?php if($article['type']==2):?>selected<?php endif;?>>网站页面</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-xs-12 col-sm-12">
-                                    <label for="editArticleForm_content">内容</label>
+                                    <label for="editArticleForm_content_UM">内容</label>
                                     <label class="pull-right">
-                                        <input class="ace" type="checkbox" id="text_flag">
-                                        <span class="lbl grey"> 使用富文本</span>
-                                    </label>
-                                    <label class="pull-right">
-                                        <input class="ace" type="checkbox" id="comment_flag" name="flag" value="1">
+                                        <input class="ace" type="checkbox" id="comment_flag" name="flag"
+                                               value="1" <?php if($article['flag']==1):?>checked<?php endif;?>>
                                         <span class="lbl grey"> 可以评论</span>
                                     </label>
                                     <div>
-                                        <textarea rows="9" id="editArticleForm_content" name="content"
-                                                  class="form-control"><?=article['content']?></textarea>
+                                        <script id="editArticleForm_content_UM" name="content" type="text/plain"
+                                                style="height:300px;width:100%;"><?=$article['content']?></script>
                                     </div>
                                 </div>
                             </div>
@@ -90,7 +87,7 @@
                     required: true
                 },
                 alias: {
-                    remote: '?c=admin&a=isExistArticle'
+                    remote: "?c=admin&a=isExistArticle&previous=<?=$article['alias']?>"
                 },
                 content: {
                     required: true
@@ -133,6 +130,14 @@
             },
             invalidHandler: function (form) {
             }
+        });
+
+        UM.getEditor('editArticleForm_content_UM', {
+            toolbar:[
+                'emotion | bold italic underline link unlink | forecolor backcolor |',
+                'insertorderedlist insertunorderedlist | fontfamily fontsize' ,
+                '| justifyleft justifycenter justifyright justifyjustify'
+            ]
         });
     });
 </script>
