update link name

--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -28,11 +28,11 @@
     </div>
     <div class="nav-wrap">
         <div id="nav" class="nav">
-            <a href="?"><span>我要订餐</span></a>
-            <a href="?c=article&a=view2&alias=message_board"><span>我要留言</span></a>
-            <a href="?c=article&a=view2&&alias=order_guide"><span>订餐指南</span></a>
+            <a href="?"><span>我要买</span></a>
+            <a href="?c=article&a=view2&&alias=order_guide"><span>购物指南</span></a>
+            <a href="?c=article&a=view2&alias=message_board"><span>意见反馈</span></a>
             <a class="cart" href="javascript:;">
-                <span>我的餐车（<b>3</b>）</span>
+                <span>我的购物车（<b>3</b>）</span>
             </a>
         </div>
     </div>
