--- a/view/layout/web/header.tpl.html
+++ b/view/layout/web/header.tpl.html
@@ -2,11 +2,11 @@
     <div class="hdt-wrap">
         <div class="hdt">
             <div class="logo">
-                <a href="?"><img src="static/img/logo.jpg"></a>
+                <a href="?"><img src="static/img/logo.jpg" alt="<?=$sysconfig['name']?>"></a>
             </div>
-            <div class="hdc geyou">
+            <div class="hdc">
                 <div class="hdi">
-                    <div id="ctl00_top1_top41_ul_outLogin" class="login">
+                    <div class="login">
                         <!--<span class="left"></span>
                         <span>欢迎登陆！</span>-->
                         <a class="loga">[收藏]</a>
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="nav-wrap">
-        <div id="nav" class="nav">
+        <div class="nav">
             <a href="?"><span>我要买</span></a>
             <a href="?c=article&a=view2&&alias=order_guide"><span>购物指南</span></a>
             <a href="?c=article&a=view2&alias=message_board"><span>意见反馈</span></a>
